@@ -40,7 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
-* 
+* [jan] Fix incorrect dependencies.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -775,7 +775,7 @@
    <package>
     <name>Horde_ActiveSync</name>
     <channel>pear.horde.org</channel>
-    <min>2.4.0</min>
+    <min>2.4.0beta1</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
@@ -1619,7 +1619,7 @@
    <date>2013-05-07</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
-* 
+* [jan] Fix incorrect dependencies.
    </notes>
   </release>
  </changelog>
